# Fluence-NFT-Wallet

./: .gitignore  README.md  package-lock.json  package.json
aqua/: main.aqua
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/aqua/: main.aqua
frontend/public/: avm.wasm
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/_aqua/: main.ts
frontend/src/components/: CreateAccount.tsx  ImportAccount.tsx  Login.tsx  NFTComponent.tsx  NFTWallet.tsx  SelectedNFTComponent.tsx
rust-services/: .repl_history  Cargo.toml  Config.toml  README.md  build.sh  config.json
rust-services/artifacts/: private_key_store.wasm
rust-services/src/: README.md  main.rs
