[package]
name = "rust-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "private_key_store"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.13", features = ["logger"] }
log = "0.4.8"
marine-sqlite-connector = "0.5.0"
marine = "0.6.13"
aes = "0.7.5"
